@@ -1,6 +1,8 @@
 package westmeijer.oskar.weatherapi.exception;
 
+import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -8,24 +10,49 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
 import westmeijer.oskar.weatherapi.location.exception.LocationNotSupportedException;
 import westmeijer.oskar.weatherapi.openapi.server.model.ProblemDetails;
 
+import java.net.URI;
+
 @ControllerAdvice
 public class RestExceptionHandler extends ResponseEntityExceptionHandler {
 
     @ExceptionHandler(value = {LocationNotSupportedException.class})
-    protected ResponseEntity<ProblemDetails> handleLocationNotSupported(LocationNotSupportedException ex) {
+    protected ResponseEntity<ProblemDetails> handleLocationNotSupported(LocationNotSupportedException ex, HttpServletRequest request) {
         logger.error("Exception occurred during weather lookup for request.", ex);
-        String message = String.format("Requested locationId not found. Please verify it is supported. locationId: %s", ex.getLocationId());
-        var problem = new ProblemDetails();
-        problem.setTitle("Location not known");
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(problem);
+        var responseStatus = HttpStatus.NOT_FOUND;
+
+        var problem = new ProblemDetails()
+                .type(URI.create("about:blank"))
+                .title("Location not found")
+                .status(responseStatus.value())
+                .detail("Location with id %s is not supported.".formatted(ex.getLocationId()))
+                .instance(String.valueOf(URI.create(request.getRequestURI())))
+                .code("LOCATION_NOT_SUPPORTED");
+
+        return ResponseEntity.status(responseStatus)
+                .contentType(MediaType.APPLICATION_PROBLEM_JSON)
+                .body(problem);
     }
 
-    @ExceptionHandler(value = {Exception.class})
-    protected ResponseEntity<String> handleGeneralException(RuntimeException ex) {
-        logger.error("Exception occurred during lookup for request.", ex);
-        String message = "Exception occurred during lookup for request. Please review request.";
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(message);
-    }
+    @ExceptionHandler(Exception.class)
+    protected ResponseEntity<ProblemDetails> handleGeneralException(
+            Exception ex,
+            HttpServletRequest request) {
 
+        logger.error("Unexpected exception occurred during request processing.", ex);
+
+        var status = HttpStatus.INTERNAL_SERVER_ERROR;
+
+        var problem = new ProblemDetails()
+                .type(URI.create("about:blank"))
+                .title("Server Error")
+                .status(status.value())
+                .detail("The server encountered an unexpected error.")
+                .instance(request.getRequestURI())
+                .code("SERVER_ERROR");
+
+        return ResponseEntity.status(status)
+                .contentType(MediaType.APPLICATION_PROBLEM_JSON)
+                .body(problem);
+    }
 
 }
